[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[project]
name = "http-echo-server"
version = "0.0.1"
dependencies = ["Flask", "gunicorn"]
requires-python = ">=3.14"
authors = [{name = "Fastily", email = "fastily@users.noreply.github.com"}]
description = "Simple http echo server"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E.*"]
keywords = ["http", "echo"]
classifiers = [
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/fastily/http-echo-server"
"Bug Tracker" = "https://github.com/fastily/http-echo-server/issues"

[tool.uv.build-backend]
module-name = "http_echo_server"
module-root = ""